# batup

./: .gitignore  CMakeLists.txt  README.md
doc/: BATCompressionProject.doc  log.txt
expt/: 1234.py  batstat.py  genbat.py  mergecommon.py  sort1024k.py  sort128k.py  sort256k.py  sortint.py  sortk.py
src/: app.cpp  app.h  byteorder.h  compapp.cpp  compapp.h  compressor.h  decompapp.cpp  decompapp.h  decompressor.h  main.cpp  page.h  properties.cpp  properties.h  wordordercomp.cpp  wordordercomp.h  wordorderdecomp.cpp  wordorderdecomp.h
test/: byteordertest.cpp  propertiestest.cpp  wordordercomptest.cpp  wordorderdecomptest.cpp
